# blink_evaluation

./: README.md  load_sample_file.py  pyproject.toml
file/: case_1.csv  case_2.csv  case_3.csv  check_ground_truth_annotations.py  note.txt
src/blink_evaluation/: __init__.py  api.py  blink_epoch_report.py  channel_scoring.py  epoch_utils.py  intervals.py  io.py  matching.py  metrics.py  prediction_annotation.py  types.py  visualization.py
tests/: test_channel_scoring.py  test_epoch_utils.py
tutorial/: blink_events_masterlist_kleifges.csv  ear_eog_predicted_kleifges.csv  tutorial_case_1.py  tutorial_case_2.py  tutorial_case_3.py  tutorial_kleifges_real.py
