[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blink-evaluation"
version = "0.1.0"
description = "Evaluate blink-detection annotations in time-series EEG/MEG data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mne>=1.0",
    "numpy>=1.22",
    "scipy>=1.7",
    "pandas>=1.4",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blink_evaluation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
